# CMatrix_Operations

./: .gitignore  CMakeLists.txt  README.md  makefile
src/: CMakeLists.txt  main.c  matrix_operators.c  matrix_operators.h  memory.c  operations.c  operators.c
